2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

Wed Jun 18 15:46:27 2003  Jonathan Blandford  <jrb@gnome.org>

	* Makefile.am (EXTRA_DIST): add $(desktop_icons_DATA)

2003-06-06 Mark Finlay <sisob@eircom.net>

 	* gnome-ccthemes.png
	* Makefile.am

	Add icon for the theme applet from gnome-desktop

2003-05-28  Christian Neumair  <chris@gnome-de.org>

	* theme-install.glade
	* theme-properties.glade:

	HIGified (#105004).

2003-05-13  Andrew Sobala  <aes@gnome.org>

	* Makefile.am: removed theme-thumbnail.[ch]
	* gnome-theme-manager.c: (meta_theme_selection_changed):
	theme-thumbnail is now in libcommon. Removed meta_theme_set; also now
	in libcommon.
	* theme-thumbnail.c: removed, now in libcommon
	* theme-thumbnail.h: removed, now in libcommon

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-05-03  Kjartan Maraas  <kmaraas@gnome.org>

	* theme-thumbnail.c: (create_image): Unref the
	icon_theme after using it.

2003-05-02  Kjartan Maraas  <kmaraas@gnome.org>

	* theme-properties.glade: Add a colon for consistency.
	Fixes bug #103923.

2003-04-29  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-theme-manager.c: (main): Fix a typo. Adapted version
	of a patch from <mitr@volny.cz>. Fixes bug #111849.

2003-04-29  Kjartan Maraas  <kmaraas@gnome.org>

	* theme-thumbnail.c: (message_from_capplet), (message_from_child),
	(generate_theme_thumbnail), (theme_thumbnail_factory_init): Plug
	leaks and guard against invalid reads reported by valgrind.

Wed Feb  5 17:03:26 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.[ch] (get_default_string_from_key): get the
	default from the schema and always sort it at the top.

	* gnome-theme-details.c: ditto

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Tue Jan 21 00:44:03 2003  Jonathan Blandford  <jrb@gnome.org>
