@@ -1,3 +1,8 @@
+2003-07-02  Mark McLoughlin  <mark@skynet.ie>
+
+	* gnome-theme-manager.c: (idle_async_func), (load_meta_themes):
+	use the default image if the thumbnailer fails.
+
 2003-06-24  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.3.3
